[package]
name = "workers"
version = "0.1.0"
edition = "2021"

[lib]
name="workers"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = {version = "1", features = ["full"]}
async-trait = "0.1"
log = "0.4"
