[package]
name = "workers"
version = "0.1.0"
edition = "2021"

[lib]
name="workers"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = {version = "1", features=["rt", "sync", "macros"]}
log = "0.4"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
tokio = {version = "1", features=["rt", "rt-multi-thread", "sync", "macros", "time"]}

[[bench]]
name = "pool_bench"
harness = false

[[example]]
name = "stress"
